# IIoT-Edge-Gateway

./: CHANGELOG.md  CMakeLists.txt  MQTTPUB  README.md
common/config/: conf.cfg
common/config/inc/: conf_utils.h
common/config/src/: conf_utils.c
common/log/inc/: log_utils.h  logger.h
common/log/src/: log_utils.c  logger.c
common/mqtt/inc/: mqtt_utils.h
common/mqtt/src/: mqtt_utils.c
common/utils/inc/: utils.h
common/utils/src/: utils.c
iiot_gateway/inc/: iiot_gateway.h
iiot_gateway/src/: iiot_gateway.c
test/: test_iiot_gateway.cpp
